// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be able to render Rust Models and should log expected output to console 1`] = `
Array [
  "// BooleanReturn represents a BooleanReturn model.
#[derive(Clone, Copy, Debug, Deserialize, Eq, Hash, Ord, PartialEq, PartialOrd, Serialize)]
pub struct BooleanReturn(pub bool);

",
]
`;

exports[`Should be able to render Rust Models and should log expected output to console 2`] = `
Array [
  "// ArrayReturn represents a ArrayReturn model.
#[derive(Clone, Debug, Deserialize, Eq, Hash, Ord, PartialEq, PartialOrd, Serialize)]
pub struct ArrayReturn(pub Vec<String>);

",
]
`;

exports[`Should be able to render Rust Models and should log expected output to console 3`] = `
Array [
  "// IntegerParam represents a IntegerParam model.
#[derive(Clone, Copy, Debug, Deserialize, Eq, Hash, Ord, PartialEq, PartialOrd, Serialize)]
pub struct IntegerParam(pub i64);

",
]
`;

exports[`Should be able to render Rust Models and should log expected output to console 4`] = `
Array [
  "// FloatParam represents a FloatParam model.
#[derive(Clone, Copy, Debug, Deserialize, PartialEq, PartialOrd, Serialize)]
pub struct FloatParam(pub f64);

",
]
`;

exports[`Should be able to render Rust Models and should log expected output to console 5`] = `
Array [
  "// BooleanParam represents a BooleanParam model.
#[derive(Clone, Copy, Debug, Deserialize, Eq, Hash, Ord, PartialEq, PartialOrd, Serialize)]
pub struct BooleanParam(pub bool);

",
]
`;

exports[`Should be able to render Rust Models and should log expected output to console 6`] = `
Array [
  "// StringParam represents a StringParam model.
#[derive(Clone, Debug, Deserialize, Eq, Hash, Ord, PartialEq, PartialOrd, Serialize)]
pub struct StringParam(pub String);

",
]
`;

exports[`Should be able to render Rust Models and should log expected output to console 7`] = `
Array [
  "[package]
name = \\"newtype-idiom-rs-example\\"
version = \\"1.0.0\\"
authors = [\\"AsyncAPI Rust Champions\\"]
homepage = \\"https://www.asyncapi.com/tools/modelina\\"
repository = \\"https://github.com/asyncapi/modelina\\"
license = \\"Apache-2.0\\"
description = \\"Rust models generated by AsyncAPI Modelina\\"
edition = \\"2018\\"

[dependencies]
serde = { version = \\"1\\", features = [\\"derive\\"] }
serde_json = { version=\\"1\\", optional = true }

[dev-dependencies]

[features]
default = [\\"json\\"]
json = [\\"dep:serde_json\\"]",
]
`;

exports[`Should be able to render Rust Models and should log expected output to console 8`] = `
Array [
  "#[macro_use]
extern crate serde;
extern crate serde_json;

pub mod boolean_return;
pub use self::boolean_return::*;

pub mod array_return;
pub use self::array_return::*;

pub mod integer_param;
pub use self::integer_param::*;

pub mod float_param;
pub use self::float_param::*;

pub mod boolean_param;
pub use self::boolean_param::*;

pub mod string_param;
pub use self::string_param::*;",
]
`;
